[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/DragPecaL.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.1383, 32.3971 )

[node name="DragPecaL" type="Node2D" groups=[
"Peca",
]]
position = Vector2( 406.994, 119.407 )
script = ExtResource( 2 )

[node name="Peca1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area" type="Area2D" parent="Peca1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peca1/Area"]
shape = SubResource( 1 )

[node name="Peca2" type="Sprite" parent="."]
position = Vector2( 0, 64 )
texture = ExtResource( 1 )

[node name="Area" type="Area2D" parent="Peca2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peca2/Area"]
shape = SubResource( 1 )

[node name="Peca3" type="Sprite" parent="."]
position = Vector2( 0, 128 )
texture = ExtResource( 1 )

[node name="Area" type="Area2D" parent="Peca3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peca3/Area"]
shape = SubResource( 1 )

[node name="Peca4" type="Sprite" parent="."]
position = Vector2( 64, 128 )
texture = ExtResource( 1 )

[node name="Area" type="Area2D" parent="Peca4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peca4/Area"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Peca1/Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Peca1/Area" to="." method="_on_Area_area_exited"]
[connection signal="input_event" from="Peca1/Area" to="." method="_on_Area_input_event"]
[connection signal="input_event" from="Peca2/Area" to="." method="_on_Area_input_event"]
[connection signal="input_event" from="Peca3/Area" to="." method="_on_Area_input_event"]
[connection signal="input_event" from="Peca4/Area" to="." method="_on_Area_input_event"]
